# CleanifyAI

./: .gitignore  Dockerfile  README.md  environment.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml
datasets/: task_metadata.json
datasets/easy/: dirty.csv  gold.csv
datasets/expert/: dirty.csv  gold.csv
datasets/hard/: dirty.csv  gold.csv
datasets/medium/: dirty.csv  gold.csv
server/: app.py
static/: index.html
