[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-cleaning-openenv"
version = "1.0.0"
description = "OpenEnv-compatible data cleaning environment for RL and LLM agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "thorodin103" }
]
dependencies = [
  "fastapi==0.104.1",
  "uvicorn==0.24.0",
  "pydantic==2.5.0",
  "pandas==2.1.3",
  "numpy==1.26.2",
  "openai==1.3.7",
  "PyYAML==6.0.1",
  "python-dotenv==1.0.0"
]

[tool.setuptools]
py-modules = ["main", "environment", "models", "inference"]
